# modules/apps/commerce/headless/headless-commerce/headless-commerce-punchout-impl/src/main/java/com/liferay/headless/commerce/punchout/internal/resource/v1_0/BasePunchoutSessionResourceImpl.java
@@ -72,7 +72,7 @@ public abstract class BasePunchoutSessionResourceImpl
 	/**
 	 * Invoke this method with the command line:
 	 *
-	 * curl -X 'POST' 'http://localhost:8080/oheadless-commerce-punchout/v1.0/punchout/session/request' -d $'{"buyerGroup": ___, "buyerOrganization": ___, "buyerUser": ___, "cart": ___, "punchoutReturnURL": ___, "punchoutSessionRedirectURL": ___, "punchoutSessionType": ___}' --header 'Content-Type: application/json' -u 'test@liferay.com:test'
+	 * curl -X 'POST' 'http://localhost:8080/oheadless-commerce-punchout/v1.0/punchout/session/request' -d $'{"buyerGroup": ___, "buyerOrganization": ___, "buyerUser": ___, "cart": ___, "punchoutReturnURL": ___, "punchoutSessionType": ___, "punchoutStartURL": ___}' --header 'Content-Type: application/json' -u 'test@liferay.com:test'
 	 */
 	@Override
 	@Consumes({"application/json", "application/xml"})
